--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "_comment": "Add any grunt dependencies you need to this file, such as grunt-contrib-requirejs, grunt-contrib-less, etc...",
   "name": "deploy_to_target",
+  "private": true,
   "author": "Jake Feasel <jfeasel@gmail.com>",
   "version": "0.0.1",
   "devDependencies": {
